Finally fixed scrollbar for side menu

--- a/css/map.main.css
+++ b/css/map.main.css
@@ -652,10 +652,11 @@ map-app map-localebox .map_localebox_text {
 #side_map_menu {
 	overflow-y: scroll;
     height: calc(100vh - 120px);
+    position: relative;
 }
 #side_map_menu::-webkit-scrollbar {
-	width: 0.25em;
-	background-color: rgba(0,123,255,0.50);
+	width: 0.1em;
+	background-color: rgba(0,123,255,0);
 }
 #side_map_menu::-webkit-scrollbar-thumb {
 	background-color: rgba(0,123,255,1);
